--- a/DelfiApp.csproj
+++ b/DelfiApp.csproj
@@ -232,6 +232,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Text1.txt" />
     <Content Include="version.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
