--- a/DelfiApp.csproj
+++ b/DelfiApp.csproj
@@ -197,6 +197,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeLog.designer.cs">
+      <DependentUpon>DeLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -205,6 +211,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DeLog.resx">
+      <DependentUpon>DeLog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
